# SymbolicMathematics

./: .gitignore  beam_integration.ipynb  default_settings.json  integrate.py  local_settings.json  pyproject.toml
notebooks/: beam_integration.ipynb
src/: evaluator.py  utils.py
src/envs/: char_sp.py
symbolicmathematics/: __main__.py  default_settings.yaml  integrate.py  trainer.py  utils.py
symbolicmathematics/envs/: sympy_utils.py
symbolicmathematics/model/: __init__.py
tests/: setup_tests.py  test_fwd_bwd_integration.py
