[tool.poetry]
name = "symbolicmathematics"
version = "0.1.1"
description = ""
authors = ["Guillaume Lample <glample@fb.com>", "François Charton <fcharton@fb.com>"]
packages = [
  { include = "symbolicmathematics" }
]

include = [ "symbolicmathematics/default_settings.yaml" ]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.5.1"
sympy = "^1.6"
numexpr = "^2.7.1"
antlr4-python3-runtime = ">=4.8"
func_timeout = "^4.3.5"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
